    * seeking in MPEG-ES fixed
    * support for Real multirate files
    * framerate autodetection for MPEG-4 and H.264 video in ES and TS streams
    * MP3 in Real files
    * more user-friendly info about audio and subtitle tracks in Ogg files
    * avisynth demuxer
    * Multichannel MP3 in MP4 files support (MP3on4)
    * some classes of nonworking 14.4/28.8 RealAudio files fixed
    * added code to autodetect and demux mpeg audio layers 1 and 2 

    Streaming:
    * stream selection and bandwidth support for MMS over HTTP
    * fallback to HTTP if connection refused on pnm://
    * support for UDP streaming (udp://)
    * support for vstream TiVo streams (tivo://)

    FFmpeg/libavcodec:
    * RV20 fixes
    * many H.264 fixes
    * B-frames in H.264, H.264 weighted prediction support
    * a lot of integer overflow and pointer fixes
    * 32 bit RGB support in TSCC
    * multichannel MP3 decoder (MP3on4)
    * 3g2 support
    * ALAC audio decoder
    * LOCO video decoder
    * WNV1 video decoder
    * shorten audio decoder and demuxer

    GUI:
    * half size event implemented and added to the menu
    * ESD configuration dialog and software volume control option
    * memleaks fixed

    Filters:
    * big cleanup of audio filter layer
    * faster af_format for most common cases
    * float handling in the audio filter layer finally fixed
    * audio plugins finally removed

    MEncoder:
    * new experimental MPEG muxer, compatible with DVD and (S)VCD
    * multiple file support
    * -speed support (framerate conversion with speedup/slowdown)
    * EDL support

    Others:
    * -z option replaced by -vo png suboption
    * icc fix in the Win32 loader
    * crash with Turkish locale fixed
    * several memleak fixes
    * -aa* options are replaced by -vo aa suboptions


  pre6: "X-mas present" December 23, 2004

    DOCS:
    * finally all options are documented
    * man page completely reviewed for spelling, wording and clarity